--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1 id="title">Welcome to CI/CD Demo</h1>
+    <h2>uday hii</h2>
 <p>This site is deployed automatically.</p>
 <button onclick="changeText()">Click Me</button>
 <script src="script.js"></script>
